fixed sketchpad-editor layers, a lot of z-index, etc; introduced .row-spacer, which comes just before the .row-picker and has the lower z-index (this was done because firefox blocked out the ability to use inputs if they had a z-index lower than a parent element)

--- a/app/styl/app.styl
+++ b/app/styl/app.styl
@@ -141,8 +141,10 @@ header
 		height 50px
 
 	.container
+		z-index -5
 		background transparent url('../img/header-bg.png') no-repeat scroll 50% 94%
 		min-height 250px
+		margin-bottom 10px
 		.banner
 			width 130px
 			height 223px
@@ -173,60 +175,69 @@ header
 		font-family 'Lobster',cursive
 		font-size 1.3rem
 
+	.workspace-view
+		display inline-block
+		width 100%
+		height 100%
+		.sketchpad-editor
+			border 1px solid rgba(0, 0, 0, 0.15) !important
+
 	.sketchpad
 		position relative
 		.alert-saved
 			margin-top 10px
 
 		.sketchpad-editor:before
-			z-index 20
-			position: absolute
-			top: -2px
-			left: 0
-			content: ''
-			width: 100%
-			height: 100%
-			background-color whiteSmoke
-			border: 1px solid rgba(0, 0, 0, 0.150)
+			z-index -1
+			position absolute
+			top -2px
+			left 0
+			content ''
+			width 100%
+			height 100%
+			background #faf9e4
+			border 1px solid rgba(0, 0, 0, 0.150)
 			box-shadow(1px, 1px, 2px, rgba(0, 0, 0, 0.19))
 			transform-rotate(2deg)
 
 		.sketchpad-editor:after
-			z-index 10
+			z-index -2
 			position absolute
 			top 1px
 			left -2px
 			content ''
 			width 100%
 			height 100%
-			background-color whiteSmoke
+			background #faf9e4
 			border 1px solid rgba(0, 0, 0, 0.150)
 			box-shadow(1px, 1px, 2px, rgba(0, 0, 0, 0.2))
 			transform-rotate(358deg)
 
-	.workspace-view
-		display inline-block
-		width 100%
-		height 100%
-
 	.sketchpad-editor
-		z-index 30
-		-moz-user-select text
-		cursor crosshair
-		border 1px solid black
-		height 500px
-
 		position relative
-		background whiteSmoke
-		padding 10px
+		height 500px
+		cursor crosshair
+
+		padding 6px
 		border 1px solid rgba(0, 0, 0, 0.150)
 		box-shadow(1px, 1px, 2px, rgba(0, 0, 0, 0.18))
+
+		border 2px solid #468C40
+		box-sizing(border-box)
+
+		background whiteSmoke
+		background-prefixed-radial-gradient(center, ellipse cover, #ffffff 0%, #ffffff 54%, #faf9e4 100%)
 
 		> div
 			z-index 40
 			height 100%
 			*
 				z-index 50
+
+		.tree-view
+			border 7px solid #468C40
+			border-radius 2px
+			box-sizing(border-box)
 
 	.sketchpad-tools-right
 		.box
@@ -481,7 +492,7 @@ header
 				&.flip
 					transform-flipV()
 				&:last-child
-					z-index 20
+					z-index -2
 			.rosette
 				width 292px
 				height 245px
@@ -489,7 +500,7 @@ header
 				position absolute
 				top -125px
 				right -200px
-				z-index 60
+				z-index 10
 		.holly-holder-right
 			.holly
 				left -27px
@@ -508,9 +519,10 @@ header
 				position relative
 				left -168px
 				top -57px
-				z-index 60
+				z-index 10
 				margin-bottom -100px
 		.holly
+			z-index -3
 			background transparent url('../img/frame-holly.png') no-repeat scroll top left
 			position relative
 			width 70px
@@ -519,7 +531,7 @@ header
 				background-position 0% 99%
 				height 86px
 
-	.row-picker,.row-share-button
+	.row-spacer,.row-picker,.row-share-button
 		background -moz-linear-gradient(left,  rgba(238,236,223,0.4) 0%, rgba(237,235,222,0.85) 22%, rgba(236,234,222,1) 31%, rgba(234,232,222,1) 50%, rgba(236,234,222,1) 73%, rgba(237,235,222,0.85) 81%, rgba(238,236,223,0.4) 100%)
 		background -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(238,236,223,0.4)), color-stop(22%,rgba(237,235,222,0.85)), color-stop(31%,rgba(236,234,222,1)), color-stop(50%,rgba(234,232,222,1)), color-stop(73%,rgba(236,234,222,1)), color-stop(81%,rgba(237,235,222,0.85)), color-stop(100%,rgba(238,236,223,0.4)))
 		background -webkit-linear-gradient(left,  rgba(238,236,223,0.4) 0%,rgba(237,235,222,0.85) 22%,rgba(236,234,222,1) 31%,rgba(234,232,222,1) 50%,rgba(236,234,222,1) 73%,rgba(237,235,222,0.85) 81%,rgba(238,236,223,0.4) 100%)
@@ -527,8 +539,9 @@ header
 		background -ms-linear-gradient(left,  rgba(238,236,223,0.4) 0%,rgba(237,235,222,0.85) 22%,rgba(236,234,222,1) 31%,rgba(234,232,222,1) 50%,rgba(236,234,222,1) 73%,rgba(237,235,222,0.85) 81%,rgba(238,236,223,0.4) 100%)
 		background linear-gradient(to right,  rgba(238,236,223,0.4) 0%,rgba(237,235,222,0.85) 22%,rgba(236,234,222,1) 31%,rgba(234,232,222,1) 50%,rgba(236,234,222,1) 73%,rgba(237,235,222,0.85) 81%,rgba(238,236,223,0.4) 100%)
 
-	.row-picker
-		padding-top 100px
+	.row-spacer
+		z-index -3
+		height 100px
 		position relative
 		.hr
 			position absolute
@@ -539,6 +552,9 @@ header
 			background transparent
 			border-top 1px solid #ccc
 			box-shadow(-1px, -1px, 8px, #ccc)
+
+	.row-picker
+		position relative
 		h2
 			display block
 			font-size 2.1em
